Nexus-OSS/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus-oss
spec:
  selector:
    matchLabels:
      run: nexus-oss
  serviceName: "nexus-oss"
  replicas: 1
  template:
    metadata:
      labels:
        run: nexus-oss
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: nexus-oss
        image: sonatype/nexus3:3.28.1
        ports:
        - name: web
          containerPort: 8081
        - name: registry
          containerPort: 5001
        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data
        resources:
          limits:
            cpu: "4"
          requests:
            cpu: "1"
  volumeClaimTemplates:
  - metadata:
      name: nexus-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
