Nexus-OSS/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-oss
  labels:
    run: nexus-oss
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8081
    protocol: TCP
  - name: registry
    port: 5001
    protocol: TCP
  selector:
    run: nexus-oss
