Nexus-OSS/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nexus.danmanners.io
    kubernetes.io/ingress.class: traefik
  labels:
    run: nexus-oss
  name: nexus-oss-ingress
  namespace: default
spec:
  rules:
    - host: nexus.danmanners.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: nexus-oss
              servicePort: 8081
